# AI-Toolbox-Experiments

./: .ycm_extra_conf.py  CMakeLists.txt  DO_ME_FIRST.sh  README.md  READ_ME_FIRST.sh
plots/: README.md  runExperiments.py
plots/Scripts/: makeGnuplotScript.sh
plots/experiments/: experiments.json
src/: CMakeLists.txt  example_rnd_main.cpp
